fix: long pitcher name text-overflow

--- a/src/components/Game/Content/Content.module.scss
+++ b/src/components/Game/Content/Content.module.scss
@@ -29,7 +29,7 @@
   @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
     display: flex;
     flex-direction: row;
-		position: relative;
+    position: relative;
   }
 }
 
@@ -70,7 +70,7 @@
     position: sticky;
     top: calc(var(--desktop-nav-height) + 56px + 100vw / 16 * 9 + var(--top-shift));
     z-index: 1;
-		border-top: 0.5px solid #cdcccc;
+    border-top: 0.5px solid #cdcccc;
     border-bottom: 0.5px solid #cdcccc;
 
     &.noVideo {
@@ -89,6 +89,22 @@
     align-items: center;
     height: 27px;
     padding-left: 7px;
+
+    > div {
+      &:first-child {
+        width: calc(100% - 196px);
+
+        > p {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+
+      &:last-child {
+        width: 196px;
+      }
+    }
   }
   @media screen and (orientation: landscape) and (max-width: 1000px) and (max-height: 800px) {
     display: flex;
@@ -119,10 +135,10 @@
 }
 
 .eventsWrapper {
-	width: 53vw;
+  width: 53vw;
 
   li {
     flex: 1 0 33.3333%;
-		max-width: 33.3333%;
+    max-width: 33.3333%;
   }
 }
